# ext-deps-generator

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  CMakeLists.txt  README.md  TODO.md  Upload.txt  build.linux.sh  build.mac.sh  build.py  build.windows.ps1  build_cef.py  check_releases.py  config_ubuntu22.sh  requirements.txt  run_test.ps1  run_test.sh
.claude/commands/: build-library.md  check-releases.md
builder/: __init__.py  autotools_builder.py  cmake_builder.py  config.py  meson_builder.py  msys2_builder.py  tools_check.py
libraries/: _build_order.yaml  bc7enc_rdo.yaml  brotli.yaml  bzip2.yaml  clipper2.yaml  cppzmq.yaml  cpu_features.yaml  cryptopp-cmake.yaml  fastgltf.yaml  flac.yaml  freetype.yaml  glslang.yaml  harfbuzz.yaml  hwloc.yaml  jsoncpp.yaml  lame.yaml  lib3mf.yaml  libjpeg-turbo.yaml  libogg.yaml  libpng.yaml  libressl.yaml  libsamplerate.yaml  libsndfile.yaml  libvorbis.yaml  libvpx.yaml  libwebp.yaml  libzip.yaml  libzmq.yaml  lunasvg.yaml  mpg123.yaml  openal-soft.yaml  opus.yaml  pthread-win32.yaml  reproc.yaml  spirv-headers.yaml  spirv-tools.yaml  taglib.yaml  ufbx.yaml  xz.yaml  zlib.yaml  (+1 more)
patches/: bc7enc_rdo.patch  clipper2.patch  jsoncpp.patch  lame.patch  lib3mf.patch  libvpx.patch  openal-soft.patch  spirv-tools.patch  ufbx.patch  zlib.patch
repositories/libressl/: configure
scripts/linux/: build.brotli.sh  build.bzip2.sh  build.clipper2.sh  build.cpu_features.sh  build.harfbuzz.sh  build.libjpeg-turbo.sh  build.libpng.sh  build.libwebp.sh  build.libzip.sh  build.libzmq.sh  build.openal-soft.sh  build.taglib.sh  build.xz.sh  build.zstd.sh
scripts/mac/: build.brotli.sh  build.bzip2.sh  build.clipper2.sh  build.cpu_features.sh  build.harfbuzz.sh  build.libjpeg-turbo.sh  build.libpng.sh  build.libwebp.sh  build.libzip.sh  build.libzmq.sh  build.openal-soft.sh  build.taglib.sh  build.xz.sh  build.zstd.sh
scripts/windows/: build.brotli.ps1  build.bzip2.ps1  build.clipper2.ps1  build.cppzmq.ps1  build.cpu_features.ps1  build.cryptopp-cmake.ps1  build.freetype.ps1  build.harfbuzz.ps1  build.hwloc.ps1  build.lib3mf.ps1  build.libjpeg-turbo.ps1  build.libpng.ps1  build.libsamplerate.ps1  build.libwebp.ps1  build.libzip.ps1  build.libzmq.ps1  build.openal-soft.ps1  build.pthread-win32.ps1  build.taglib.ps1  build.xz.ps1  build.zlib.ps1  build.zstd.ps1
src/: main.cpp
